--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ Lions enjoy relaxing and lazing around. They spend between 16 and 20 hours each 
  <br>
 
  <img src="http://4.bp.blogspot.com/-M56e2Pa6d9o/UOa9vntYGiI/AAAAAAAAAAs/QTGZI_2TdeE/s640/africa-lions.jpg" alt="a lion">
+ <ol>
+ 	<li> red</li>
+ 	<li> green</li>
+ 	</ol>
 	
 </body>
 
